@@ -2,3 +2,4 @@ package ifneeded DIO 1.0 [list source [file join $dir dio.tcl]]
 package ifneeded DIODisplay 1.0 [list source [file join $dir diodisplay.tcl]]
 package ifneeded dio_Mysql 0.1 [list source [file join $dir dio_Mysql.tcl]]
 package ifneeded dio_Postgresql 0.1 [list source [file join $dir dio_Postgresql.tcl]]
+package ifneeded dio_Sqlite 0.1 [list source [file join $dir dio_Sqlite.tcl]]
